MainFreight_PartialSandbox/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Action Request - Audit</fullName>
        </values>
        <values>
            <fullName>Action Request - Implementation</fullName>
        </values>
        <values>
            <fullName>Action Request - Investigation</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Incoming Response</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Waiting on 3rd Party</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Field used for the Action Request Case to define the Case Type.</description>
        <inlineHelpText>This is a read only field and auto populated from Account-Action Request Type.</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Align Technology</fullName>
                </value>
                <value>
                    <fullName>Blackhawk Network</fullName>
                </value>
                <value>
                    <fullName>Carl Zeiss Meditec</fullName>
                </value>
                <value>
                    <fullName>Nutanix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Request_Assigned_By__c</fullName>
        <formula>Owner:User.FirstName+ &quot;  &quot; +Owner:User.LastName</formula>
        <label>Assigned By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Request_Category__c</fullName>
        <label>Action Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Account_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accuracy</fullName>
                </value>
                <value>
                    <fullName>Billing Accuracy</fullName>
                </value>
                <value>
                    <fullName>Billing Timeliness</fullName>
                </value>
                <value>
                    <fullName>Change in Requirements</fullName>
                </value>
                <value>
                    <fullName>Communication</fullName>
                </value>
                <value>
                    <fullName>Customs Clearance Delay</fullName>
                </value>
                <value>
                    <fullName>Damage Shipment/Piece</fullName>
                </value>
                <value>
                    <fullName>Data Integrity</fullName>
                </value>
                <value>
                    <fullName>Documentation Issue</fullName>
                </value>
                <value>
                    <fullName>IT Issue</fullName>
                </value>
                <value>
                    <fullName>Inventory Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Shortage</fullName>
                </value>
                <value>
                    <fullName>System Bug</fullName>
                </value>
                <value>
                    <fullName>Transit Delay</fullName>
                </value>
                <value>
                    <fullName>Unprofessional Conduct</fullName>
                </value>
                <value>
                    <fullName>Event - Accuracy</fullName>
                </value>
                <value>
                    <fullName>Event - Damage</fullName>
                </value>
                <value>
                    <fullName>Event - Transit Delay</fullName>
                </value>
                <value>
                    <fullName>Non Event - Accuracy</fullName>
                </value>
                <value>
                    <fullName>Non Event - Damage</fullName>
                </value>
                <value>
                    <fullName>Non Event - Transit Delay</fullName>
                </value>
                <value>
                    <fullName>Cards - Damage Shipment Concealed</fullName>
                </value>
                <value>
                    <fullName>Cards - Damage Shipment Visible</fullName>
                </value>
                <value>
                    <fullName>Cards - Communication</fullName>
                </value>
                <value>
                    <fullName>Cards - Transit Time Delay</fullName>
                </value>
                <value>
                    <fullName>Non Cards - Damage Shipment Concealed</fullName>
                </value>
                <value>
                    <fullName>Non Cards - Damage Shipment Visible</fullName>
                </value>
                <value>
                    <fullName>Non Cards - Communication</fullName>
                </value>
                <value>
                    <fullName>Non Cards - Transit Time Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_Request_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investigation</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>After_Closed_Email_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>After Closed Email received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auditor_Comments__c</fullName>
        <label>Auditor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager__c</fullName>
        <formula>If( Owner:User.Manager.FirstName != NULL, Owner:User.Manager.FirstName + &apos; &apos;, &apos;&apos; ) + Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Sub_Categories__c</fullName>
        <label>Case Reason Sub Categories</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Late Receipt – ORD</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - LAX</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - DFW</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - EWR</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - ATL</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - SFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Reason__c</fullName>
        <label>Case Sub-Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipment Tracking</fullName>
                </value>
                <value>
                    <fullName>Order Tracking</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Service Request</fullName>
                </value>
                <value>
                    <fullName>Booking</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Question</fullName>
                </value>
                <value>
                    <fullName>Corrective Action</fullName>
                </value>
                <value>
                    <fullName>Preventative Action</fullName>
                </value>
                <value>
                    <fullName>Late Receipt – ORD</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - LAX</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - DFW</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - EWR</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - ATL</fullName>
                </value>
                <value>
                    <fullName>Late Receipt - SFO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check field for case dashboard to identify if a client has responded</description>
        <inlineHelpText>The Client has responded if the box is checked</inlineHelpText>
        <label>Client Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Days_since_Case_Closed__c</fullName>
        <formula>ClosedDate + ( ( 1 / ( 24*60 ) ) *2 )</formula>
        <label>Days since Case Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>1. Defines what level of service to be provided to the end customer. 
2. Automatically get updated based on the Queue to which the Case is assigned to.</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
                <value>
                    <fullName>Action Request</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Carl Zeiss</fullName>
                </value>
                <value>
                    <fullName>Control Tower</fullName>
                </value>
                <value>
                    <fullName>Dispatch</fullName>
                </value>
                <value>
                    <fullName>Domestic - Direct</fullName>
                </value>
                <value>
                    <fullName>Domestic - Distributed</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>carl zeiss test</fullName>
                </value>
                <value>
                    <fullName>Carl Zeiss FG</fullName>
                </value>
                <value>
                    <fullName>RH</fullName>
                </value>
                <value>
                    <fullName>Customs Brokerage</fullName>
                </value>
                <value>
                    <fullName>Ocean</fullName>
                </value>
                <value>
                    <fullName>Transport Brokerage</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Immediate_Action__c</fullName>
        <label>Immediate Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MatchOwner__c</fullName>
        <formula>IF( $User.Id  =  Account_Owner__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Warning_Violation__c</fullName>
        <label>Milestone Warning / Violation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Milestones_Warning_Violation_Time__c</fullName>
        <label>Milestones Warning / Violation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_Email__c</fullName>
        <label>Owner&apos;s Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Resolution_Warning_Violation_Time__c</fullName>
        <label>Resolution Warning / Violation Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolution_Warning_Violation__c</fullName>
        <label>Resolution Warning / Violation</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Only Partner or MainFreight Branch Accounts can be associated.</inlineHelpText>
        <label>Responsible Party</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Account should be of Type either Partner or Mainfreight Branch.</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner, Mainfreight Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Responsible Party Cases</relationshipLabel>
        <relationshipName>ResponsiblePartyCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Number__c</fullName>
        <label>Shipping Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_the_Action_taken_Effective__c</fullName>
        <label>Was the Action taken Effective</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Accounting_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Accounting</label>
        <queue>Accounting</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_Payable_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Accounts Payable</label>
        <queue>Accounts_Payable</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_of_Accounting_Finance</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_Receivable_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Accounts Receivable</label>
        <queue>Accounts_Receivable</queue>
        <sharedTo>
            <roleAndSubordinates>Accounting_Finance_User</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Action_Request</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Activity_Type__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Action_Request_Due_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Milestone_Warning_Violation__c</columns>
        <columns>Milestones_Warning_Violation_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>contains</operation>
            <value>Corrective Action,Preventative Action</value>
        </filters>
        <label>Internal Support</label>
    </listViews>
    <listViews>
        <fullName>Administration_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Administration</label>
        <queue>Administration</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_of_Administration</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Milestone_Warning_Violation__c</columns>
        <columns>Milestones_Warning_Violation_Time__c</columns>
        <columns>Resolution_Warning_Violation__c</columns>
        <columns>Resolution_Warning_Violation_Time__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
        <sharedTo>
            <group>Support_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Account_Type__c</columns>
        <columns>Action_Request_Category__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
        <sharedTo>
            <group>Support_Manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brokerage_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Brokerage</label>
        <queue>Brokerage</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_Of_International</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carl_Zeiss_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Carl Zeiss</label>
        <queue>Carl_Zeiss</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_Of_Shared_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carl_Zeiss_FG_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Carl Zeiss FG</label>
        <queue>Carl_Zeiss_FG</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cartage_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Cartage</label>
        <queue>Cartage</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_Of_Shared_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cases_by_Account_owner</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Team</filterScope>
        <label>Cases by Account owner</label>
        <sharedTo>
            <group>Sales_Manager</group>
            <group>Sales_User</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Control_Tower_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Control Tower</label>
        <queue>Control_Tower</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_Of_Shared_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dispatch_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Dispatch</label>
        <queue>Dispatch</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_Of_Shared_Services</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Domestic_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Milestone_Warning_Violation__c</columns>
        <columns>Milestones_Warning_Violation_Time__c</columns>
        <columns>Resolution_Warning_Violation__c</columns>
        <columns>Resolution_Warning_Violation_Time__c</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <label>Domestic</label>
        <queue>Domestic</queue>
        <sharedTo>
            <roleAndSubordinates>Manager_Of_Domestic</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Customer_Support</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <label>Customer Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Support</fullName>
        <active>true</active>
        <businessProcess>Standard Support Process</businessProcess>
        <label>Internal Support</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>AR_NonStandard_Account_Type_Validation</fullName>
        <active>false</active>
        <description>If Account Type = Non-Standard make sure Account&gt; Action Request Type = Non-Standard else Error</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Internal_Support&apos; 
&amp;&amp;
ISPICKVAL( Account.Action_Request_Type__c, &quot;Standard&quot; ) 
&amp;&amp;  
TEXT( Account_Type__c ) != &quot;Standard&quot;</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>For Account Action Request Type = Standard, the Account Type Should be Standard.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AR_Standard_Account_Type_Validation</fullName>
        <active>false</active>
        <description>If Account Type = Standard make sure Account&gt; Action Request Type = Standard else Error.</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Internal_Support&apos; 
&amp;&amp;  
ISPICKVAL( Account.Action_Request_Type__c, &quot;Non-Standard&quot; )
&amp;&amp;
(
 Account.Name != TEXT( Account_Type__c )
 ||
 ISPICKVAL( Account_Type__c, &quot;Standard&quot; )
)</errorConditionFormula>
        <errorDisplayField>Account_Type__c</errorDisplayField>
        <errorMessage>There is no Account Type and Non-standard Action Request category for this Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Activity_Type_should_be_closed</fullName>
        <active>true</active>
        <description>Activity Type should be closed as the case status is closed</description>
        <errorConditionFormula>RecordType.DeveloperName = &apos;Internal_Support&apos; &amp;&amp;    ISPICKVAL(Status, &apos;Closed&apos;)  &amp;&amp; 
NOT(ISPICKVAL(Activity_Type__c, &apos;Closed&apos;))</errorConditionFormula>
        <errorDisplayField>Activity_Type__c</errorDisplayField>
        <errorMessage>Activity Type should be closed as the case status is closed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fields_Cannot_Be_Changed_On_Case_Closure</fullName>
        <active>true</active>
        <description>When the Action Request Case is Closed the fields:
Root Cause, Immediate Action, Corrective Action, Auditor Comments should be not editable.</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Internal_Support&apos; 

&amp;&amp; 

NOT( ISCHANGED( IsClosed ) ) &amp;&amp; ISPICKVAL( Status, &apos;Closed&apos; ) &amp;&amp; ( ISCHANGED( Root_Cause__c ) || ISCHANGED( Immediate_Action__c ) || ISCHANGED( Corrective_Action__c ) || ISCHANGED( Auditor_Comments__c ) )</errorConditionFormula>
        <errorMessage>Root Cause, Immediate Action, Corrective Action, Auditor Comments cannot be changed once the Action Request is Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Closed_Activity_Type</fullName>
        <active>true</active>
        <description>Root Cause, Immediate Action, Corrective Action, Auditor Comments fields cannot be empty when When Activity Type is Closed.</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Internal_Support&apos; 

&amp;&amp; 

ISPICKVAL( Activity_Type__c, &apos;Closed&apos; )

&amp;&amp;

( ISBLANK( Root_Cause__c ) || ISBLANK( Immediate_Action__c) || ISBLANK( Corrective_Action__c) || ISBLANK( Auditor_Comments__c ) )</errorConditionFormula>
        <errorMessage>Root Cause, Immediate Action, Corrective Action, Auditor Comments fields cannot be empty when Activity Type is Closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Implementation_Activity_Type</fullName>
        <active>true</active>
        <description>When the Activity Type = Implementation, Root Cause, Immediate Action, Corrective Action cannot be empty.</description>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Internal_Support&apos;

&amp;&amp;

ISPICKVAL( Activity_Type__c, &apos;Implementation&apos; ) 

&amp;&amp; 

( ISBLANK( Root_Cause__c ) || ISBLANK( Immediate_Action__c) || ISBLANK( Corrective_Action__c ) )</errorConditionFormula>
        <errorMessage>Root Cause, Immediate Action, Corrective Action fields cannot be empty when Activity Type is Implementation.</errorMessage>
    </validationRules>
</CustomObject>